# gal-lib

./: .gitignore  CLAUDE.md  README.en.md  README.ja.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/debug/: auto-scan-metadata-match-low.md  detail-title-overflow-hide-launch.md  launch-flow-le-and-config-reset.md  open-dir-thread-block-popup.md  scan-completed-before-ingest.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-INTEGRATION.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/notes/: metadata-enrichment-context.md
.planning/phases/01-foundation/: 01-PLAN-OUTLINE.md  01-RESEARCH.md  01-VERIFICATION.md  01b-SUMMARY.md  01c-SUMMARY.md  01f-PLAN.md  01f-SUMMARY.md
.planning/phases/02-library-ingest/: 02-CONTEXT.md  02-UI-SPEC.md  02a-SUMMARY.md  02b-PLAN.md  02c-PLAN.md  02d-SUMMARY.md  02e-PLAN.md  02e-SUMMARY.md  02f-PLAN.md  02f-SUMMARY.md
.planning/phases/03-launch-playtime/: 03-PLAN-OUTLINE.md  03-VERIFICATION.md  03a-SUMMARY.md  03b-SUMMARY.md  03d-SUMMARY.md  03f-SUMMARY.md
.planning/phases/04-library-polish/: 04-CONTEXT.md  04-PLAN-OUTLINE.md  04a-PLAN.md  04b-SUMMARY.md  04c-SUMMARY.md  04d-PLAN.md  04d-SUMMARY.md  04e-SUMMARY.md  04f-SUMMARY.md  deferred-items.md
.planning/phases/05-stats-media/: 05-CONTEXT.md  05-VERIFICATION.md  05c-PLAN.md  05d-SUMMARY.md  05e-PLAN.md
.planning/phases/06-design-tokens-tweaks/: 06-PLAN.md  06-SUMMARY.md
.planning/phases/07-library-redesign/: 07-SUMMARY.md
.planning/phases/08-detail-redesign/: 08-SUMMARY.md
.planning/phases/09-scan-stats-pages/: 09-SUMMARY.md
.planning/phases/11-metadata-enrichment/: 11-CONTEXT.md
.planning/phases/12-scan-pipeline-review-queue/: 12-CONTEXT.md  12-PLAN.md  12-SUMMARY.md  12-VERIFICATION.md
.planning/phases/13-person-enrichment-backfill-ux/: 13-CONTEXT.md  13-PLAN.md  13-SUMMARY.md  13-VERIFICATION.md
.planning/phases/14-filesystem-actions-detail-polish/: 14-CONTEXT.md  14-PLAN.md  14-SUMMARY.md  14-VERIFICATION.md
.planning/phases/15-v12-real-app-smoke/: 15-CONTEXT.md  15-PLAN.md  15-SUMMARY.md  15-VERIFICATION.md
.planning/quick/20260509-display-fallbacks-and-source-links/: 20260509-PLAN.md  20260509-SUMMARY.md
.planning/quick/20260509b-detail-topnav-launch-icon-more-menu/: 20260509b-PLAN.md  20260509b-SUMMARY.md
.planning/quick/20260509c-metadata-match-quality/: 20260509c-PLAN.md  20260509c-SUMMARY.md
.planning/quick/20260509d-rescan-retries-pending-and-refresh-all/: 20260509d-PLAN.md  20260509d-SUMMARY.md
.planning/quick/20260509e-aggressive-trim-and-vndb-recall/: 20260509e-PLAN.md  20260509e-SUMMARY.md
.planning/quick/20260509f-realtime-meta-fetch-card-status/: 20260509f-CONTEXT.md  20260509f-PLAN.md  20260509f-SUMMARY.md
.planning/quick/20260509g-fix-cancel-concurrent-ingest-virtualize/: 20260509g-CONTEXT.md  20260509g-PLAN.md  20260509g-SUMMARY.md
.planning/quick/20260510-ui-fixes-detail-cards-filter-brands/: 20260510-PLAN.md  20260510-SUMMARY.md
.planning/quick/20260510b-r18-marker-and-custom-views/: 20260510b-PLAN.md  20260510b-SUMMARY.md
.planning/quick/20260512-cover-cache-buster/: 20260512-PLAN.md  20260512-SUMMARY.md
.planning/quick/20260512b-three-bugs-year-hover-density/: 20260512b-PLAN.md  20260512b-SUMMARY.md
.planning/quick/20260512c-picker-overlay-year-fallback-reseed-review/: 20260512c-PLAN.md  20260512c-SUMMARY.md
.planning/quick/20260512d-overlay-followup-prefix-confidence/: 20260512d-PLAN.md  20260512d-SUMMARY.md
.planning/quick/20260512e-sidebar-redesign-outer-scrollbar/: 20260512e-PLAN.md  20260512e-SUMMARY.md
.planning/quick/20260512f-sidebar-polish-and-view-dialogs/: 20260512f-PLAN.md  20260512f-SUMMARY.md
.planning/quick/20260512g-fix-isfilterempty-custom-view/: 20260512g-PLAN.md  20260512g-SUMMARY.md
.planning/quick/260513-2nx-year-backfill-replace-enrich/: 260513-2nx-PLAN.md  260513-2nx-SUMMARY.md
.planning/quick/260513-3df-two-button-metadata-refresh/: 260513-3df-PLAN.md  (+1 more)
.planning/research/: questions.md
.planning/seeds/: persons-page-enrichment.md
docs/: PHASE-01-VERIFICATION.md  release.md
scripts/: release.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: scan_titles.rs
src-tauri/migrations/: 0001_init.sql  0002_add_scan_and_metadata.sql  0003_add_launch_and_session_status.sql  0004_add_brand_year_favorite.sql  0005_add_screenshots_and_saves.sql  0006_disable_default_screenshots.sql  0007_add_metadata_enrichment.sql  0008_add_age_rating_and_custom_views.sql  0009_add_scan_review_queue.sql  0010_drop_age_rating.sql  0011_add_metadata_fetched_at.sql  0012_add_scan_skip_dirs.sql  0013_add_external_rating.sql  0014_drop_local_rating.sql
src-tauri/resources/locale-emulator/: NOTICE.md
src-tauri/src/: commands.rs  cover_cache.rs  data_dir.rs  db.rs  http_safe.rs  ingest.rs  lib.rs  main.rs  portrait_cache.rs  save_backup.rs  screenshot.rs  title_clean.rs  tray.rs
src-tauri/src/launch/: le.rs  mod.rs  orchestrator.rs  process_track.rs  session.rs
src-tauri/src/metadata/: bangumi.rs  limiter.rs  match_score.rs  mod.rs  types.rs  vndb.rs
src-tauri/src/scan/: exe_score.rs  mod.rs  removed_marker.rs  types.rs  walker.rs
src/hooks/: useSmoothWheel.ts  useTauriListen.ts
src/lib/: advancedFilter.ts  customViews.ts  db.ts  display.ts  games.ts  launch.ts  metadata.ts  persons.ts  preferences.ts  saves.ts  scan.ts  scanReview.ts  screenshots.ts  search.ts  stats.ts  tags.ts  toast.ts  updater.ts
src/routes/: Detail.tsx  Library.tsx  Persons.tsx  Scan.tsx  Screenshots.tsx  Settings.tsx  Stats.tsx
src/store/: app.ts  library.ts  preferences.ts
src/styles/: titlebar.css
(+135 files in other folders)
