[package]
name = "gal-lib"
version = "0.1.0"
description = "gal-lib — galgame collection & launcher manager"
authors = ["gal-lib contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gal_lib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dunce = "1"
anyhow = "1"
thiserror = "2"

# Release profile — size-optimized for single-exe distribution (RESEARCH § Architecture).
# 01f will further tune (e.g. `incremental = false`); leave room for that here.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
incremental = false
