[package]
name = "gal-lib"
version = "0.1.0"
description = "gal-lib — galgame collection & launcher manager"
authors = ["gal-lib contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gal_lib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dunce = "1"
anyhow = "1"
thiserror = "2"
# Phase 2 (02a) — locked dependency lockup for scan engine + metadata clients
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
walkdir = "2"
regex = "1"
governor = "0.6"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
once_cell = "1"
futures-util = "0.3"
# 02d — direct sqlx access from #[tauri::command] handlers (commands.rs).
# Pin to the same version that `tauri-plugin-sql` already pulls in (0.8) so
# the workspace resolves a single sqlx; features mirror the plugin
# (`sqlite + runtime-tokio`) so we share its compiled artifact.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
# Phase 3 (03a) — locked dependency lockup for launch + playtime.
# winreg: read HKEY_CURRENT_USER\Software\LocaleEmulator (LE detection, 03b).
# sysinfo: enumerate processes (LE-spawned game tracking, 03c).
# windows: OpenProcess / WaitForSingleObject for low-overhead exit watcher (03c).
winreg = "0.52"
sysinfo = "0.32"
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"] }
# 03c — RFC3339 timestamps for session lifecycle (started_at / ended_at) and
# elapsed-second math in `launch::session`. Pinned to 0.4 (workspace-wide,
# also matches sqlx's transitive expectations).
chrono = { version = "0.4", features = ["serde"] }
# Phase 5 (05a) — screenshot capture pipeline.
# screenshots: cross-platform desktop screen capture (Windows = DXGI/GDI fallback).
# png: encode captured frames to PNG (8-bit RGBA), no external libpng dependency.
screenshots = "0.8"
png = "0.17"

[dev-dependencies]
# 03b — `set_le_path` unit test uses TempDir for an isolated config.json fixture.
tempfile = "3"

# Release profile — size-optimized for single-exe distribution (RESEARCH § Architecture).
# 01f will further tune (e.g. `incremental = false`); leave room for that here.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
incremental = false
