[package]
name = "gal-lib"
version = "0.3.10"
description = "gal-lib — galgame collection & launcher manager"
authors = ["gal-lib contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gal_lib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dunce = "1"
anyhow = "1"
thiserror = "2"
# Phase 2 (02a) — locked dependency lockup for scan engine + metadata clients
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
walkdir = "2"
regex = "1"
governor = "0.6"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
# Phase 14 (FS-01) — open arbitrary filesystem paths / URLs through the
# platform handler (Explorer / xdg-open / open). Replaces the ad-hoc
# `cmd /C start` and `explorer.exe` Command paths.
tauri-plugin-opener = "2"
# Quick 260514-upd — Tauri auto-update via GitHub Releases.
# Endpoint + signature verification configured in tauri.conf.json under `plugins.updater`.
# `tauri-plugin-process` is needed for `relaunch()` after installing the update.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Quick 260709-mnc — 单实例守卫：第二次启动聚焦已有窗口后退出。
# 必须注册为 Builder 的第一个 plugin（官方要求）。
tauri-plugin-single-instance = "2"
once_cell = "1"
futures-util = "0.3"
# 02d — direct sqlx access from #[tauri::command] handlers (commands.rs).
# Pin to the same version that `tauri-plugin-sql` already pulls in (0.8) so
# the workspace resolves a single sqlx; features mirror the plugin
# (`sqlite + runtime-tokio`) so we share its compiled artifact.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
# Phase 3 (03a) — locked dependency lockup for launch + playtime.
# winreg: read HKEY_CURRENT_USER\Software\LocaleEmulator (LE detection, 03b).
# sysinfo: enumerate processes (LE-spawned game tracking, 03c).
# windows: OpenProcess / WaitForSingleObject for low-overhead exit watcher (03c).
winreg = "0.52"
sysinfo = "0.32"
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_Storage_FileSystem"] }
# 03c — RFC3339 timestamps for session lifecycle (started_at / ended_at) and
# elapsed-second math in `launch::session`. Pinned to 0.4 (workspace-wide,
# also matches sqlx's transitive expectations).
chrono = { version = "0.4", features = ["serde"] }
# Phase 5 (05a) — screenshot capture pipeline.
# screenshots: cross-platform desktop screen capture (Windows = DXGI/GDI fallback).
# png: encode captured frames to PNG (8-bit RGBA), no external libpng dependency.
screenshots = "0.8"
png = "0.17"

[dev-dependencies]
# 03b — `set_le_path` unit test uses TempDir for an isolated config.json fixture.
tempfile = "3"

# Release profile — size-optimized for single-exe distribution (RESEARCH § Architecture).
# 01f will further tune (e.g. `incremental = false`); leave room for that here.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
incremental = false

# 本地快编 profile —— 给日常 `pnpm tauri build --profile dev-release --no-bundle` 验证用。
# 继承 release 的 panic/strip 等设置，但放开并行 codegen / thin LTO / 增量编译，
# 以 ~10~30% 体积代价换 2~3 倍编译加速。发版仍走默认 [profile.release]。
[profile.dev-release]
inherits = "release"
codegen-units = 16
lto = "thin"
incremental = true
opt-level = 2
